--- a/foosball-stats-app/package.json
+++ b/foosball-stats-app/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@fortawesome/angular-fontawesome": "^0.10.2",
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "devextreme": "^21.2.4",
     "devextreme-angular": "^21.2.4",
     "devextreme-schematics": "^1.3.0",
